; ModuleID = '/home/carl/AnghaBench/linux/net/ax25/extr_ax25_std_subr.c_ax25_std_establish_data_link.c'
source_filename = "/home/carl/AnghaBench/linux/net/ax25/extr_ax25_std_subr.c_ax25_std_establish_data_link.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, i64, i64 }

@AX25_MODULUS = common dso_local global i64 0, align 8
@AX25_SABM = common dso_local global i32 0, align 4
@AX25_POLLON = common dso_local global i32 0, align 4
@AX25_COMMAND = common dso_local global i32 0, align 4
@AX25_SABME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ax25_std_establish_data_link(%struct.TYPE_9__* %0) #0 {
  %2 = alloca %struct.TYPE_9__*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %2, align 8
  %3 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %3, i32 0, i32 0
  store i32 0, i32* %4, align 8
  %5 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 2
  store i64 0, i64* %6, align 8
  %7 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @AX25_MODULUS, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %18

12:                                               ; preds = %1
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %14 = load i32, i32* @AX25_SABM, align 4
  %15 = load i32, i32* @AX25_POLLON, align 4
  %16 = load i32, i32* @AX25_COMMAND, align 4
  %17 = call i32 @ax25_send_control(%struct.TYPE_9__* %13, i32 %14, i32 %15, i32 %16)
  br label %24

18:                                               ; preds = %1
  %19 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %20 = load i32, i32* @AX25_SABME, align 4
  %21 = load i32, i32* @AX25_POLLON, align 4
  %22 = load i32, i32* @AX25_COMMAND, align 4
  %23 = call i32 @ax25_send_control(%struct.TYPE_9__* %19, i32 %20, i32 %21, i32 %22)
  br label %24

24:                                               ; preds = %18, %12
  %25 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %26 = call i32 @ax25_calculate_t1(%struct.TYPE_9__* %25)
  %27 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %28 = call i32 @ax25_stop_idletimer(%struct.TYPE_9__* %27)
  %29 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %30 = call i32 @ax25_stop_t3timer(%struct.TYPE_9__* %29)
  %31 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %32 = call i32 @ax25_stop_t2timer(%struct.TYPE_9__* %31)
  %33 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %34 = call i32 @ax25_start_t1timer(%struct.TYPE_9__* %33)
  ret void
}

declare dso_local i32 @ax25_send_control(%struct.TYPE_9__*, i32, i32, i32) #1

declare dso_local i32 @ax25_calculate_t1(%struct.TYPE_9__*) #1

declare dso_local i32 @ax25_stop_idletimer(%struct.TYPE_9__*) #1

declare dso_local i32 @ax25_stop_t3timer(%struct.TYPE_9__*) #1

declare dso_local i32 @ax25_stop_t2timer(%struct.TYPE_9__*) #1

declare dso_local i32 @ax25_start_t1timer(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
